--- a/src/app/views/billing/billing.component.html
+++ b/src/app/views/billing/billing.component.html
@@ -1,107 +1,171 @@
 <c-row class="mt-4">
-    <c-col xs>
-        <c-card class="mb-4">
-            <c-card-body>
-                <form cForm novalidate class="row g-3">
-                    <c-col [md]="3">
-                        <c-input-group>
-                            <span cInputGroupText>
-                                <svg [cIcon]="icons.cilSearch"></svg>
-                            </span>
-                            <input [(ngModel)]="billingFilter.id" name="id" autoComplete="id" cFormControl placeholder="ID" />
-                        </c-input-group>
-                    </c-col>
-                    <c-col [md]="3">
-                        <c-input-group>
-                            <span cInputGroupText>
-                                <svg [cIcon]="icons.cilSearch"></svg>
-                            </span>
-                            <input [(ngModel)]="billingFilter.orderId" name="orderId" autoComplete="orderId" cFormControl placeholder="Order ID" />
-                        </c-input-group>
-                    </c-col>
-                    <c-col [md]="3">
-                        <c-input-group>
-                            <span cInputGroupText>
-                                <svg [cIcon]="icons.cilSearch"></svg>
-                            </span>
-                            <input [(ngModel)]="billingFilter.customerId" name="customerId" autoComplete="customerId" cFormControl placeholder="Customer ID" />
-                        </c-input-group>
-                    </c-col>
-                    <c-col [md]="3">
-                        <c-input-group>
-                            <span cInputGroupText>
-                                <svg [cIcon]="icons.cilSearch"></svg>
-                            </span>
-                            <input [(ngModel)]="billingFilter.invoiceNumber" name="invoiceNumber" autoComplete="invoiceNumber" cFormControl placeholder="Invoice Number" />
-                        </c-input-group>
-                    </c-col>
-                    <c-col [md]="3">
-                        <c-input-group>
-                            <span cInputGroupText>
-                                <svg [cIcon]="icons.cilCog"></svg>
-                            </span>
-                            <select [(ngModel)]="billingFilter.paymentType" name="paymentType" cFormControl cSelect placeholder="Payment Type">
-                                <option [value]="null" [defaultSelected]="true">Payment Type</option>
-                                @for (item of paymentTypeEnumList; track $index) {
-                                    <option [value]="item">{{ item }}</option>
-                                }
-                            </select>
-                        </c-input-group>
-                    </c-col>
-                    <c-col [md]="3">
-                        <c-input-group>
-                            <span cInputGroupText>
-                                <svg [cIcon]="icons.cilCog"></svg>
-                            </span>
-                            <select [(ngModel)]="billingFilter.paymentStatus" name="paymentStatus" cFormControl cSelect placeholder="Payment Status">
-                                <option [value]="null" [defaultSelected]="true">Payment Status</option>
-                                @for (item of paymentStatusEnumList; track $index) {
-                                    <option [value]="item">{{ item }}</option>
-                                }
-                            </select>
-                        </c-input-group>
-                    </c-col>
-                    <c-col [md]="3">
-                        <c-input-group>
-                            <span cInputGroupText>
-                                <svg [cIcon]="icons.cilDescription"></svg>
-                            </span>
-                            <select [(ngModel)]="billingFilter.orderStatus" name="orderStatus" cFormControl cSelect placeholder="Order Status">
-                                <option [value]="null" [defaultSelected]="true">Order Status</option>
-                                @for (item of orderStatusEnumList; track $index) {
-                                    <option [value]="item">{{ item }}</option>
-                                }
-                            </select>
-                        </c-input-group>
-                    </c-col>
-                    
-                    <c-col [md]="12" class="text-end">
-                        <button cButton class="me-1" color="secondary" type="reset" (click)="resetFilter()">
-                            Reset
-                        </button>
-                        <button cButton color="primary" [disabled]="loadings.billing" (click)="doGetBillingList()">
-                            <c-spinner *ngIf="loadings.billing" aria-hidden="true" size="sm" variant="grow"></c-spinner>
-                            Filter
-                        </button>
-                    </c-col>
-                </form>
-            </c-card-body>
-        </c-card>
-    </c-col>
+  <c-col xs>
+    <c-card class="mb-4">
+      <c-card-body>
+        <form cForm novalidate class="row g-3">
+          <c-col [md]="3">
+            <c-input-group>
+              <span cInputGroupText>
+                <svg [cIcon]="icons.cilSearch"></svg>
+              </span>
+              <input
+                [(ngModel)]="billingFilter.id"
+                name="id"
+                autoComplete="id"
+                cFormControl
+                placeholder="ID"
+              />
+            </c-input-group>
+          </c-col>
+          <c-col [md]="3">
+            <c-input-group>
+              <span cInputGroupText>
+                <svg [cIcon]="icons.cilSearch"></svg>
+              </span>
+              <input
+                [(ngModel)]="billingFilter.orderId"
+                name="orderId"
+                autoComplete="orderId"
+                cFormControl
+                placeholder="Order ID"
+              />
+            </c-input-group>
+          </c-col>
+          <c-col [md]="3">
+            <c-input-group>
+              <span cInputGroupText>
+                <svg [cIcon]="icons.cilSearch"></svg>
+              </span>
+              <input
+                [(ngModel)]="billingFilter.customerId"
+                name="customerId"
+                autoComplete="customerId"
+                cFormControl
+                placeholder="Customer ID"
+              />
+            </c-input-group>
+          </c-col>
+          <c-col [md]="3">
+            <c-input-group>
+              <span cInputGroupText>
+                <svg [cIcon]="icons.cilSearch"></svg>
+              </span>
+              <input
+                [(ngModel)]="billingFilter.invoiceNumber"
+                name="invoiceNumber"
+                autoComplete="invoiceNumber"
+                cFormControl
+                placeholder="Invoice Number"
+              />
+            </c-input-group>
+          </c-col>
+          <c-col [md]="3">
+            <c-input-group>
+              <span cInputGroupText>
+                <svg [cIcon]="icons.cilCog"></svg>
+              </span>
+              <select
+                [(ngModel)]="billingFilter.paymentType"
+                name="paymentType"
+                cFormControl
+                cSelect
+                placeholder="Payment Type"
+              >
+                <option [value]="null" [defaultSelected]="true">
+                  Payment Type
+                </option>
+                @for (item of paymentTypeEnumList; track $index) {
+                <option [value]="item">{{ item }}</option>
+                }
+              </select>
+            </c-input-group>
+          </c-col>
+          <c-col [md]="3">
+            <c-input-group>
+              <span cInputGroupText>
+                <svg [cIcon]="icons.cilCog"></svg>
+              </span>
+              <select
+                [(ngModel)]="billingFilter.paymentStatus"
+                name="paymentStatus"
+                cFormControl
+                cSelect
+                placeholder="Payment Status"
+              >
+                <option [value]="null" [defaultSelected]="true">
+                  Payment Status
+                </option>
+                @for (item of paymentStatusEnumList; track $index) {
+                <option [value]="item">{{ item }}</option>
+                }
+              </select>
+            </c-input-group>
+          </c-col>
+          <c-col [md]="3">
+            <c-input-group>
+              <span cInputGroupText>
+                <svg [cIcon]="icons.cilDescription"></svg>
+              </span>
+              <select
+                [(ngModel)]="billingFilter.orderStatus"
+                name="orderStatus"
+                cFormControl
+                cSelect
+                placeholder="Order Status"
+              >
+                <option [value]="null" [defaultSelected]="true">
+                  Order Status
+                </option>
+                @for (item of orderStatusEnumList; track $index) {
+                <option [value]="item">{{ item }}</option>
+                }
+              </select>
+            </c-input-group>
+          </c-col>
+
+          <c-col [md]="12" class="text-end">
+            <button
+              cButton
+              class="me-1"
+              color="secondary"
+              type="reset"
+              (click)="resetFilter()"
+            >
+              Reset
+            </button>
+            <button
+              cButton
+              color="primary"
+              [disabled]="loadings.billing"
+              (click)="doGetBillingList()"
+            >
+              <c-spinner
+                *ngIf="loadings.billing"
+                aria-hidden="true"
+                size="sm"
+                variant="grow"
+              ></c-spinner>
+              Filter
+            </button>
+          </c-col>
+        </form>
+      </c-card-body>
+    </c-card>
+  </c-col>
 </c-row>
 
 <ng-container *ngIf="!loadings.billing; else spinner">
-    <c-row class="mt-4">
-      <c-col xs>
-        <table
-          [hover]="true"
-          [responsive]="true"
-          [striped]="true"
-          align="middle"
-          cTable
-          class="mb-0 border"
-        >
-          <thead class="text-nowrap text-truncate">
+  <c-row class="mt-4">
+    <c-col xs>
+      <table
+        [hover]="true"
+        [responsive]="true"
+        [striped]="true"
+        align="middle"
+        cTable
+        class="mb-0 border"
+      >
+        <thead class="text-nowrap text-truncate">
           <tr>
             <th class="bg-body-tertiary">ID</th>
             <th class="bg-body-tertiary">Order ID</th>
@@ -115,51 +179,78 @@
             <th class="bg-body-tertiary text-center">Order Status</th>
             <th class="bg-body-tertiary text-center">Create Date</th>
           </tr>
-          </thead>
-          <tbody>
-            @for (data of billingList; track data.id; let i = $index) {
-              <tr>
-                <td>
-                    <div class="small text-body-secondary text-nowrap">{{ data.id }}</div>
-                </td>
-                <td>
-                    <div class="small text-body-secondary text-nowrap">{{ data.orderId }}</div>
-                </td>
-                <td>
-                    <div class="small text-body-secondary text-nowrap">{{ data.customerId }}</div>
-                </td>
-                <td>
-                    <div class="small text-body-secondary text-nowrap">{{ data.customerName }}</div>
-                </td>
-                <td>
-                    <div class="small text-body-secondary text-nowrap">{{ data.invoiceNumber }}</div>
-                </td>
-                <td class="text-center">
-                    <div class="small text-body-secondary text-nowrap">{{ data.totalPayment | currency: 'IDR' : 'symbol' : '1.0-0' : 'id' }}</div>
-                </td>
-                <td class="text-center">
-                    <div class="small text-body-secondary text-nowrap">{{ data.totalPaid | currency: 'IDR' : 'symbol' : '1.0-0' : 'id' }}</div>
-                </td>
-                <td class="text-center">
-                    <div class="small text-body-secondary text-nowrap">{{ data.paymentType }}</div>
-                </td>
-                <td class="text-center">
-                  <c-badge [color]="getPaymentStatusColor(data.paymentStatus)">{{ data.paymentStatus }}</c-badge>
-                </td>
-                <td class="text-center">
-                  <c-badge [color]="getOrderStatusColor(data.orderStatus)">{{ data.orderStatus }}</c-badge>
-                </td>
-                <td class="text-center">
-                    <div class="small text-body-secondary text-nowrap">{{ data.createdDate | date : 'MMMM dd, yyyy'  }}</div>
-                </td>
-              </tr>
-            }
-          </tbody>
-        </table>
-      </c-col>
-    </c-row>
+        </thead>
+        <tbody>
+          @for (data of billingList; track data.id; let i = $index) {
+          <tr>
+            <td>
+              <div class="small text-body-secondary text-nowrap">
+                {{ data.id }}
+              </div>
+            </td>
+            <td>
+              <div class="small text-body-secondary text-nowrap">
+                {{ data.orderId }}
+              </div>
+            </td>
+            <td>
+              <div class="small text-body-secondary text-nowrap">
+                {{ data.customerId }}
+              </div>
+            </td>
+            <td>
+              <div class="small text-body-secondary text-nowrap">
+                {{ data.customerName }}
+              </div>
+            </td>
+            <td>
+              <div class="small text-body-secondary text-nowrap">
+                {{ data.invoiceNumber }}
+              </div>
+            </td>
+            <td class="text-center">
+              <div class="small text-body-secondary text-nowrap">
+                {{
+                  data.totalPayment
+                    | currency : 'IDR' : 'symbol' : '1.0-0' : 'id'
+                }}
+              </div>
+            </td>
+            <td class="text-center">
+              <div class="small text-body-secondary text-nowrap">
+                {{
+                  data.totalPaid | currency : 'IDR' : 'symbol' : '1.0-0' : 'id'
+                }}
+              </div>
+            </td>
+            <td class="text-center">
+              <div class="small text-body-secondary text-nowrap">
+                {{ data.paymentType }}
+              </div>
+            </td>
+            <td class="text-center">
+              <c-badge [color]="getPaymentStatusColor(data.paymentStatus)">{{
+                data.paymentStatus
+              }}</c-badge>
+            </td>
+            <td class="text-center">
+              <c-badge [color]="getOrderStatusColor(data.orderStatus)">{{
+                data.orderStatus
+              }}</c-badge>
+            </td>
+            <td class="text-center">
+              <div class="small text-body-secondary text-nowrap">
+                {{ data.createdDate | date : 'MMMM dd, yyyy' }}
+              </div>
+            </td>
+          </tr>
+          }
+        </tbody>
+      </table>
+    </c-col>
+  </c-row>
 </ng-container>
 
 <ng-template #spinner>
-    <app-x-spinner></app-x-spinner>
+  <app-x-spinner></app-x-spinner>
 </ng-template>
