--- a/src/app/component/x-spinner/x-spinner.component.html
+++ b/src/app/component/x-spinner/x-spinner.component.html
@@ -1,3 +1,8 @@
-<c-col sm="12" xl="12" class="d-flex justify-content-center align-items-center" style="padding: 10em;">
-    <c-spinner variant="grow"></c-spinner>
+<c-col
+  sm="12"
+  xl="12"
+  class="d-flex justify-content-center align-items-center"
+  style="padding: 10em"
+>
+  <c-spinner variant="grow"></c-spinner>
 </c-col>
