--- a/src/app/component/x-toaster/x-toaster.component.html
+++ b/src/app/component/x-toaster/x-toaster.component.html
@@ -1,53 +1,54 @@
-<ng-container >
-    <c-toaster [placement]="placement" position="static">
-      <c-toast
-        (timer)="onTimerChange($event)"
-        (visibleChange)="onVisibleChange($event)"
-        [visible]="visible"
-        [delay]="delay">
-        <c-toast-header>
-          <svg
-            *ngIf="!isSuccess() && !isError()"
-            class="rounded me-2"
-            width="20"
-            height="20"
-            xmlns="http://www.w3.org/2000/svg"
-            preserveAspectRatio="xMidYMid slice"
-            focusable="false"
-            role="img"
-          >
-            <rect width="100%" height="100%" fill="#3399ff"></rect>
-          </svg>
-          <svg
-            *ngIf="isSuccess()"
-            class="rounded me-2"
-            width="20"
-            height="20"
-            xmlns="http://www.w3.org/2000/svg"
-            preserveAspectRatio="xMidYMid slice"
-            focusable="false"
-            role="img"
-          >
-            <rect width="100%" height="100%" fill="#1b9e3e"></rect>
-          </svg>
-  
-          <svg
-            *ngIf="isError()"
-            class="rounded me-2"
-            width="20"
-            height="20"
-            xmlns="http://www.w3.org/2000/svg"
-            preserveAspectRatio="xMidYMid slice"
-            focusable="false"
-            role="img"
-          >
-            <rect width="100%" height="100%" fill="#e55353"></rect>
-          </svg>
-          {{ title }}
-        </c-toast-header>
-        <c-toast-body>
-          <p style="margin-bottom: 0px !important;">{{ message }}</p>
-        </c-toast-body>
-      </c-toast>
-    </c-toaster>
-  </ng-container>
+<ng-container>
+  <c-toaster [placement]="placement" position="static">
+    <c-toast
+      (timer)="onTimerChange($event)"
+      (visibleChange)="onVisibleChange($event)"
+      [visible]="visible"
+      [delay]="delay"
+    >
+      <c-toast-header>
+        <svg
+          *ngIf="!isSuccess() && !isError()"
+          class="rounded me-2"
+          width="20"
+          height="20"
+          xmlns="http://www.w3.org/2000/svg"
+          preserveAspectRatio="xMidYMid slice"
+          focusable="false"
+          role="img"
+        >
+          <rect width="100%" height="100%" fill="#3399ff"></rect>
+        </svg>
+        <svg
+          *ngIf="isSuccess()"
+          class="rounded me-2"
+          width="20"
+          height="20"
+          xmlns="http://www.w3.org/2000/svg"
+          preserveAspectRatio="xMidYMid slice"
+          focusable="false"
+          role="img"
+        >
+          <rect width="100%" height="100%" fill="#1b9e3e"></rect>
+        </svg>
+
+        <svg
+          *ngIf="isError()"
+          class="rounded me-2"
+          width="20"
+          height="20"
+          xmlns="http://www.w3.org/2000/svg"
+          preserveAspectRatio="xMidYMid slice"
+          focusable="false"
+          role="img"
+        >
+          <rect width="100%" height="100%" fill="#e55353"></rect>
+        </svg>
+        {{ title }}
+      </c-toast-header>
+      <c-toast-body>
+        <p style="margin-bottom: 0px !important">{{ message }}</p>
+      </c-toast-body>
+    </c-toast>
+  </c-toaster>
+</ng-container>
