--- a/src/app/views/dashboard/components/dashboard-widget/dashboard-widget.component.html
+++ b/src/app/views/dashboard/components/dashboard-widget/dashboard-widget.component.html
@@ -1,68 +1,111 @@
 <c-row class="g-4">
-    
-    <c-col sm="6" xl="3">
-        <c-widget-stat-a
-        color="info"
-        [title]="'Income'"
-        >
-        <ng-template cTemplateId="widgetValueTemplate" ngPreserveWhitespaces>
-            <span>{{ reportData.currentIncome | currency: 'IDR' : 'symbol' : '1.0-0' : 'id' }}</span>
-            <span class="fw-normal" style="font-size: 12px;">
-            ({{ reportData.incomeChangeInValue }}% <svg cIcon [name]="getSvgIcon(reportData.incomeChangeInValue)" size="sm"></svg>)
-            </span>
-        </ng-template>
-        <ng-template cTemplateId="widgetChartTemplate">
-            <c-chart [data]="data[0]" [options]="options[0]" class="mt-3 mx-3" height="70" [type]="'line'"></c-chart>
-        </ng-template>
-        </c-widget-stat-a>
-    </c-col>
-    <c-col sm="6" xl="3">
-        <c-widget-stat-a
-        [title]="'Revenue'"
-        color="success"
-        >
-        <ng-template cTemplateId="widgetValueTemplate" ngPreserveWhitespaces>
-            <span>{{ reportData.currentRevenue | currency: 'IDR' : 'symbol' : '1.0-0' : 'id' }}</span>
-            <span class="fw-normal" style="font-size: 12px;">
-            ({{ reportData.revenueChangeInValue }}%<svg cIcon [name]="getSvgIcon(reportData.revenueChangeInValue)" size="sm"></svg>)
-            </span>
-        </ng-template>
-        <ng-template cTemplateId="widgetChartTemplate">
-            <c-chart [data]="data[1]" [options]="options[1]" class="mt-3 mx-3" height="70" type="line"></c-chart>
-        </ng-template>
-        </c-widget-stat-a>
-    </c-col>
-    <c-col sm="6" xl="3">
-        <c-widget-stat-a
-        [title]="'Orders'"
-        color="warning"
-        >
-        <ng-template cTemplateId="widgetValueTemplate" ngPreserveWhitespaces>
-            <span>{{ reportData.currentOrder }}</span>
-            <span class="fw-normal" style="font-size: 12px;">
-            ({{ reportData.orderChangeInValue }}% <svg cIcon [name]="getSvgIcon(reportData.orderChangeInValue)" size="sm"></svg>)
-            </span>
-        </ng-template>
-        <ng-template cTemplateId="widgetChartTemplate">
-            <c-chart [data]="data[2]" [options]="options[2]" class="mt-3" height="70" type="line"></c-chart>
-        </ng-template>
-        </c-widget-stat-a>
-    </c-col>
-    <c-col sm="6" xl="3">
-        <c-widget-stat-a
-            [title]="'Customers'"
-            color="secondary"
-        >
-            <ng-template cTemplateId="widgetValueTemplate" ngPreserveWhitespaces>
-                <span>{{ reportData.currentCustomer }}</span>
-                <span class="fw-normal" style="font-size: 12px;">
-                    ({{ reportData.customerChangeInValue }}% <svg cIcon [name]="getSvgIcon(reportData.customerChangeInValue)" size="sm"></svg>)
-                </span>
-            </ng-template>
-            <ng-template cTemplateId="widgetChartTemplate">
-                <c-chart [data]="data[3]" [options]="options[3]" class="mt-3 mx-3" height="70" type="bar"></c-chart>
-            </ng-template>
-        </c-widget-stat-a>
-    </c-col>
-
+  <c-col sm="6" xl="3">
+    <c-widget-stat-a color="info" [title]="'Income'">
+      <ng-template cTemplateId="widgetValueTemplate" ngPreserveWhitespaces>
+        <span>{{
+          reportData.currentIncome
+            | currency : 'IDR' : 'symbol' : '1.0-0' : 'id'
+        }}</span>
+        <span class="fw-normal" style="font-size: 12px">
+          (
+          {{ reportData.incomeChangeInValue }}%
+          <svg
+            cIcon
+            [name]="getSvgIcon(reportData.incomeChangeInValue)"
+            size="sm"
+          ></svg>
+          )
+        </span>
+      </ng-template>
+      <ng-template cTemplateId="widgetChartTemplate">
+        <c-chart
+          [data]="data[0]"
+          [options]="options[0]"
+          class="mt-3 mx-3"
+          height="70"
+          [type]="'line'"
+        ></c-chart>
+      </ng-template>
+    </c-widget-stat-a>
+  </c-col>
+  <c-col sm="6" xl="3">
+    <c-widget-stat-a [title]="'Revenue'" color="success">
+      <ng-template cTemplateId="widgetValueTemplate" ngPreserveWhitespaces>
+        <span>{{
+          reportData.currentRevenue
+            | currency : 'IDR' : 'symbol' : '1.0-0' : 'id'
+        }}</span>
+        <span class="fw-normal" style="font-size: 12px">
+          (
+          {{ reportData.revenueChangeInValue }}%<svg
+            cIcon
+            [name]="getSvgIcon(reportData.revenueChangeInValue)"
+            size="sm"
+          ></svg>
+          )
+        </span>
+      </ng-template>
+      <ng-template cTemplateId="widgetChartTemplate">
+        <c-chart
+          [data]="data[1]"
+          [options]="options[1]"
+          class="mt-3 mx-3"
+          height="70"
+          type="line"
+        ></c-chart>
+      </ng-template>
+    </c-widget-stat-a>
+  </c-col>
+  <c-col sm="6" xl="3">
+    <c-widget-stat-a [title]="'Orders'" color="warning">
+      <ng-template cTemplateId="widgetValueTemplate" ngPreserveWhitespaces>
+        <span>{{ reportData.currentOrder }}</span>
+        <span class="fw-normal" style="font-size: 12px">
+          (
+          {{ reportData.orderChangeInValue }}%
+          <svg
+            cIcon
+            [name]="getSvgIcon(reportData.orderChangeInValue)"
+            size="sm"
+          ></svg>
+          )
+        </span>
+      </ng-template>
+      <ng-template cTemplateId="widgetChartTemplate">
+        <c-chart
+          [data]="data[2]"
+          [options]="options[2]"
+          class="mt-3"
+          height="70"
+          type="line"
+        ></c-chart>
+      </ng-template>
+    </c-widget-stat-a>
+  </c-col>
+  <c-col sm="6" xl="3">
+    <c-widget-stat-a [title]="'Customers'" color="secondary">
+      <ng-template cTemplateId="widgetValueTemplate" ngPreserveWhitespaces>
+        <span>{{ reportData.currentCustomer }}</span>
+        <span class="fw-normal" style="font-size: 12px">
+          (
+          {{ reportData.customerChangeInValue }}%
+          <svg
+            cIcon
+            [name]="getSvgIcon(reportData.customerChangeInValue)"
+            size="sm"
+          ></svg>
+          )
+        </span>
+      </ng-template>
+      <ng-template cTemplateId="widgetChartTemplate">
+        <c-chart
+          [data]="data[3]"
+          [options]="options[3]"
+          class="mt-3 mx-3"
+          height="70"
+          type="bar"
+        ></c-chart>
+      </ng-template>
+    </c-widget-stat-a>
+  </c-col>
 </c-row>
