--- a/src/app/views/pages/login/login.component.html
+++ b/src/app/views/pages/login/login.component.html
@@ -1,4 +1,6 @@
-<div class="bg-light dark:bg-transparent min-vh-100 d-flex flex-row align-items-center">
+<div
+  class="bg-light dark:bg-transparent min-vh-100 d-flex flex-row align-items-center"
+>
   <c-container breakpoint="md">
     <c-row class="justify-content-center">
       <c-col lg="10" xl="8">
@@ -12,7 +14,13 @@
                   <span cInputGroupText>
                     <svg [cIcon]="icons.cilUser"></svg>
                   </span>
-                  <input [(ngModel)]="loginRequest.username" name="username" autoComplete="username" cFormControl placeholder="Username" />
+                  <input
+                    [(ngModel)]="loginRequest.username"
+                    name="username"
+                    autoComplete="username"
+                    cFormControl
+                    placeholder="Username"
+                  />
                 </c-input-group>
                 <c-input-group class="mb-4">
                   <span cInputGroupText>
@@ -31,17 +39,36 @@
                   <span cInputGroupText>
                     <svg [cIcon]="icons.cilTouchApp"></svg>
                   </span>
-                  <select [(ngModel)]="loginRequest.role" name="role" cSelect placeholder="Role">
+                  <select
+                    [(ngModel)]="loginRequest.role"
+                    name="role"
+                    cSelect
+                    placeholder="Role"
+                  >
                     <option value="ADMIN">Admin</option>
-                    <option value="TENANT_MANAGER" selected>Tenant Manager</option>
+                    <option value="TENANT_MANAGER" selected>
+                      Tenant Manager
+                    </option>
                     <option value="TENANT_ADMIN">Tenant Admin</option>
                   </select>
-                  <c-form-feedback>Please provide a valid State.</c-form-feedback>
+                  <c-form-feedback
+                    >Please provide a valid State.</c-form-feedback
+                  >
                 </c-input-group>
                 <c-row>
                   <c-col xs="6">
-                    <button cButton class="m-1" [disabled]="isLoginLoading" (click)="doLogin()">
-                      <c-spinner *ngIf="isLoginLoading" aria-hidden="true" size="sm" variant="grow"></c-spinner>
+                    <button
+                      cButton
+                      class="m-1"
+                      [disabled]="isLoginLoading"
+                      (click)="doLogin()"
+                    >
+                      <c-spinner
+                        *ngIf="isLoginLoading"
+                        aria-hidden="true"
+                        size="sm"
+                        variant="grow"
+                      ></c-spinner>
                       Login
                     </button>
                   </c-col>
@@ -54,15 +81,24 @@
               </form>
             </c-card-body>
           </c-card>
-          <c-card [ngStyle]="{'minWidth.%': 44}" class="text-white bg-primary py-5">
+          <c-card
+            [ngStyle]="{ 'minWidth.%': 44 }"
+            class="text-white bg-primary py-5"
+          >
             <c-card-body class="text-center">
               <div>
                 <h2>Sign up</h2>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                  tempor incididunt ut labore et dolore magna aliqua.
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 </p>
-                <button [active]="true" cButton class="mt-3" color="primary" routerLink="/register">
+                <button
+                  [active]="true"
+                  cButton
+                  class="mt-3"
+                  color="primary"
+                  routerLink="/register"
+                >
                   Register Now!
                 </button>
               </div>
